--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</div>
 					<div class="header_item">
 						<h1>好きな動物の紹介</h1>
-						<h2 class="penguin roboto">penguin</h2>
+						<h2 class="penguin roboto">Penguin</h2>
 					</div>
 				</div>
 			</div>
@@ -163,12 +163,12 @@
 					<h4>長谷川の推しペンギンについて</h4>
 					<p>ペンギンには様々な種類があると先ほどご紹介いたしましたが、今回わたしが紹介したいペンギンはこちら</p>
 					<h3>アデリーペンギン</h3>
-					<img src="img/Cu7ibg-VYAABWa-.jpg" alt="アデリーペンギン" width="600px">
+					<img src="img/aderi_kawaii.jpg" alt="アデリーペンギン" width="600px">
 					<p>か、かわいい…</p>
 					<img src="img/hokou_adelie.jpg" alt="全身アデリーペンギン" width="600px">
 					<p class="usui">まさに!!悪魔的可愛さッッツ!!</p>
 
-					<img src="img/2b1RifbJW9SfN0oPSGNmVT8BF6qp0GbtWZJslij4PEUt7GyFyi-TMd-iNRG5KuwkWWgx_W6HxC7giLSIUDj11S7wCT1stO1HkUFebQRvs1rnqHazKXHJyqoBbP1FLuvmk_9-7R3PtBk5rM-9chTgwA.webp" alt="攻撃的なアデリーペンギン" width="600px">
+					<img src="img/aderi_kenka.webp" alt="攻撃的なアデリーペンギン" width="600px">
 					<p class="setumei">
 						アデリーペンギンは主に南極大陸に集団でコロニーを作り生息しています。
 						こんなにかわいらしい見た目をしているアデリーペンギンですので南極で穏やかに寝転んだりして生活をしている姿を想像されるかもしれません。
@@ -190,7 +190,6 @@
 
 
 					<h3>ペンギンハイウェイ</h3>
-					<p></p>
 					<img src="img/Highway.jpg" alt="ペンギンハイウェイ" width="600px">
 					<p>森見登美彦の小説ですが最近映画としても上映されました。また先ほどご紹介したアデリーペンギンが大量に登場する作品です。</p>
 					<h4>あらすじ</h4>
@@ -234,17 +233,22 @@
 					<p>こちらは少し昔の漫画ですが、私の祖父の家にあり小さいころよく読んでいた作品です。</p>
 					<h4>あらすじ</h4>
 					<p class="setumei">
-						上野動物園が舞台の作品です。動物園にいる彼らは実はエンターテイナーとして働いており閉演した後は秘密の電車にのり、秘密の町へ帰り、人間とかわらない生活をしている日常を描いた作品です。
+						上野動物園が舞台の作品です。動物園にいる彼らは実はエンターテイナーとして働いており閉演した後は秘密の電車に乗って秘密の町へ帰り、動物の世界で生活をしている日常を描いた作品です。
 						関西弁の主人公、いや主鳥公とその母親がつくる筑前煮がおいしそうで印象深い作品です。
-						見た目のかわいらしさとは裏腹にシュールだったりブラックユーモアのちりばめ方が魅力的です。
+						見た目のかわいらしさとは裏腹にブラックユーモアのちりばめ方が魅力的です。
 					</p>
 				</div>
 			</section>	
 			<section class="saigo">
+				<h4>まとめ</h4>
 				<div class="matome wrapper">
-					<p>個人的な印象ですが、創作物におけるペンギンの取り扱いとして、ただかわいいものとして登場させるだけでなく見た目とは裏腹にある利己的な様子やシュールさなども付随してキャラクターとして構成しているような印象を抱いています。
-						<br>おそらくそういった両面性がペンギン全般の魅力につながっているのではないでしょうか?
-						<br>それではご覧いただきありがとうございました。また魅力的なペンギンのキャラクターがぜひ長谷川にも紹介してみてください♪</p>
+
+					<p>
+						創作に登場するペンギンは、ただ可愛いだけでなく、利己的だったりシュールだったりと、意外な一面を見せることが多いように感じます。<br>
+						そのギャップこそが、ペンギンの魅力につながっているのかもしれませんね。<br>
+						最後までお読みいただきありがとうございました。<br>
+						魅力的なペンギンキャラをご存じでしたら、ぜひ長谷川にも教えてください♪
+					</p>
 				</div>
 			</section>
 	</main>
